--- a/public/style.css
+++ b/public/style.css
@@ -4,34 +4,46 @@ body {
     font-family: 'Arial', sans-serif;
     background: black;
     color: #ffe81f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .star-wars {
     position: relative;
+    width: 100%;
     height: 100vh;
+    max-width: 600px;
     perspective: 400px;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .crawl {
     position: absolute;
     top: 100vh;
-    width: 90%;
-    max-width: 600px;
-    margin: auto;
+    width: 75%;
     font-size: 20px;
     transform-origin: 50% 100%;
     animation: crawl 60s linear infinite;
+    text-align: center; /* Center text horizontally */
 }
 
 .title {
-    text-align: center;
     margin-bottom: 100px;
 }
 
+.title p {
+    margin: 0;
+    font-size: 24px;
+}
+
 .title h1 {
-    font-size: 40px;
     margin: 10px 0;
+    font-size: 40px;
 }
 
 @keyframes crawl {
