--- a/templates_org/templates/index.html
+++ b/templates_org/templates/index.html
@@ -13,14 +13,11 @@
         <nav class="top-nav">
             <ul class="menu">
                 <li id="MENU-HOME">Home</li>
-                <li id="MENU-CALENDAR">캘린더</li>
                 <li id="MENU-NOTICE">공지</li>
                 <li id="MENU-MEETING">회의록</li>
                 <li id="MENU-MANAGE">관리</li>
-                <li id="MENU-EQP">ANN Info.</li>
-                <!-- <li id="MENU-SYSTEM">SYSTEM</li>       
-                <li id="MENU-ETC">기타</li> -->
-                <!-- <li id="MENU-CENTURA">CENTURA</li>
+                <li id="MENU-CALENDAR">캘린더</li>
+                <li id="MENU-CENTURA">CENTURA</li>
                 <li id="MENU-VANTAGE">VANTAGE</li>
                 <li id="MENU-FRTP">FRTP</li>
                 <li id="MENU-ESCALA">ESCALA</li>
@@ -28,7 +25,9 @@
                 <li id="MENU-HPA">HPA</li>
                 <li id="MENU-LOHAS">LOHAS</li>
                 <li id="MENU-ARGOS">ARGOS</li>
-                <li id="MENU-VIVA">VIVA</li>          -->
+                <li id="MENU-VIVA">VIVA</li>    
+                <li id="MENU-SYSTEM">SYSTEM</li>       
+                <li id="MENU-ETC">기타</li>       
             </ul>
         </nav>
     </header>
